Added view for top customers pane. Created new await async call for top customer list. Created new list to hold top customer data. Project currently builds and deploys and app runs correctly, not including incomplete top customer list functionality.

--- a/src/Inventory.App/Views/Dashboard/DashboardView.xaml
+++ b/src/Inventory.App/Views/Dashboard/DashboardView.xaml
@@ -48,6 +48,13 @@
                                          ItemsSource="{x:Bind ViewModel.Customers, Mode=OneWay}" 
                                          Tag="Customers" />
 
+                <!-- new view created to hold new list of top customers -->
+                <views:TopCustomersPane Margin="12"
+                                         Width="600"
+                                         Height="250"
+                                         ItemsSource="{x:Bind ViewModel.Customers, Mode=OneWay}" 
+                                         Tag="Customers" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+
                 <views:ProductsPane Margin="12" 
                                         Width="400"
                                         Height="250"
